updated html file & added css file

--- a/index.html
+++ b/index.html
@@ -2,18 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello, Im Taylor!</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>hello, I'm Taylor Pogue!</title>
 </head>
 
-<header>
-
-</header>
-
 <body>
-</body>
+    <header>
+        <h1>Taylor Pogue</h1>
+        <section>
+            <ul>
+                <li><a href="Bio">bio</a></li>
+                <li><a href="Projects">projects</a></li>
+                <li><a href="ContactMe">ContactMe</a></li>
+            </ul>
+        </section>
+    </header>
+</main>
 
-<footer>
-</footer>
+<section>
+    <h1 class="BioTitle">~Bio~</h1>
+
+    <p class="Bioparagraph">all about me
+    </p>
+</section>
+
+<div class="ProfilePic">
+    <img src="./Pictures/IMG_2767.jpeg">
+</div>
+
+    <footer>
+        <p>I am awesome :)</p>
+    </footer>
+</body>
 </html>
