added image to html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>hello, I'm Taylor Pogue!</title>
 </head>
 
@@ -10,8 +10,8 @@
     <header>
         <h1>Taylor Pogue</h1>
         <section>
-            <ul>
-                <li><a href="Bio">bio</a></li>
+            <ul class="links">
+                <li><a href="AboutMe">AboutMe</a></li>
                 <li><a href="Projects">projects</a></li>
                 <li><a href="ContactMe">ContactMe</a></li>
             </ul>
@@ -20,14 +20,14 @@
 </main>
 
 <section>
-    <h1 class="BioTitle">~Bio~</h1>
+    <h1 class="AboutMeTitle">About Me</h1>
 
-    <p class="Bioparagraph">all about me
+    <p class="AboutMeparagraph">all about me
     </p>
 </section>
 
 <div class="ProfilePic">
-    <img src="./Pictures/IMG_2767.jpeg">
+    <img src="./IMG_2767.jpeg">
 </div>
 
     <footer>
