added images and updtated html and css

--- a/index.html
+++ b/index.html
@@ -11,24 +11,41 @@
         <h1>Taylor Pogue</h1>
         <section>
             <ul class="links">
-                <li><a href="AboutMe">AboutMe</a></li>
-                <li><a href="Projects">projects</a></li>
-                <li><a href="ContactMe">ContactMe</a></li>
+                <li><a href="#AboutMe">AboutMe</a></li>
+                <li><a href="#Work">Work</a></li>
+                <li><a href="#ContactMe">ContactMe</a></li>
             </ul>
         </section>
     </header>
-</main>
+
 
 <section>
-    <h1 class="AboutMeTitle">About Me</h1>
+    <h2><a id="AboutMe" class="AboutMeTitle">About Me</a></h2>
 
     <p class="AboutMeparagraph">all about me
     </p>
 </section>
 
-<div class="ProfilePic">
-    <img src="./IMG_2767.jpeg">
-</div>
+        <img class="ProfilePic" src="./IMG/IMG_2767.jpeg">
+
+<section>
+    <h2><a id="Work" class="Work">Work</a></h2>
+        <a href="https://poguet.github.io/tdp-coding-challenge-1/#social-media-marketing"><img class="work1" src="./IMG/horizon.png"></a>
+        <a href=""><img class="work2" src=""></a>
+        <a href=""><img class="work3" src=""></a>
+       
+</section>
+
+<section>
+    <h2><a id="ContactMe" class="ContactMeHeader">ContactMe</a></h2>
+        <ul class="ContactMe">
+                <li><a href="Tel:512-771-8073"> Call Me at 512-771-8073</a></li>
+                <li><a href="MailTo:Pogue12@ymail.com">Email Me At Pogue12@ymail.com</a></li>
+                <li><a href="https://github.com/poguet">GitHub</a></li>
+        </ul>
+
+
+</section>
 
     <footer>
         <p>I am awesome :)</p>
