added images/updated html & css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <title>hello, I'm Taylor Pogue!</title>
 </head>
 
@@ -10,10 +11,10 @@
     <header>
         <h1>Taylor Pogue</h1>
         <section>
-            <ul class="links">
-                <li><a href="#AboutMe">AboutMe</a></li>
-                <li><a href="#Work">Work</a></li>
-                <li><a href="#ContactMe">ContactMe</a></li>
+            <ul>
+                <li><a class="links" href="#AboutMe">AboutMe</a></li>
+                <li><a class="links" href="#Work">Work</a></li>
+                <li><a class="links" href="#ContactMe">ContactMe</a></li>
             </ul>
         </section>
     </header>
@@ -22,7 +23,7 @@
 <section>
     <h2><a id="AboutMe" class="AboutMeTitle">About Me</a></h2>
 
-    <p class="AboutMeparagraph">all about me
+    <p class="AboutMeparagraph">I am a very attentive and curious individual.
     </p>
 </section>
 
@@ -31,24 +32,24 @@
 <section>
     <h2><a id="Work" class="Work">Work</a></h2>
         <a href="https://poguet.github.io/tdp-coding-challenge-1/#social-media-marketing"><img class="work1" src="./IMG/horizon.png"></a>
-        <a href=""><img class="work2" src=""></a>
-        <a href=""><img class="work3" src=""></a>
+        <a href="https://www.youtube.com/shorts/OELoOaN33ks"><img class="work2" src="./IMG/goat pic.png"></a>
+        <a href="https://www.youtube.com/watch?v=SqmGoa3dpSM"><img class="work3" src="./IMG/IMG_6513 2.JPG"></a>
        
 </section>
 
 <section>
-    <h2><a id="ContactMe" class="ContactMeHeader">ContactMe</a></h2>
-        <ul class="ContactMe">
-                <li><a href="Tel:512-771-8073"> Call Me at 512-771-8073</a></li>
-                <li><a href="MailTo:Pogue12@ymail.com">Email Me At Pogue12@ymail.com</a></li>
-                <li><a href="https://github.com/poguet">GitHub</a></li>
+    <h2><a id="ContactMe" class="ContactMeHeader">Contact Me</a></h2>
+        <ul>
+                <li><a class="ContactMe" href="Tel:512-771-8073"> Call Me at 512-771-8073</a></li>
+                <li><a class="ContactMe" href="MailTo:Pogue12@ymail.com">Email Me At Pogue12@ymail.com</a></li>
+                <li><a class="ContactMe" href="https://github.com/poguet">GitHub</a></li>
         </ul>
 
 
-</section>
+    </section>
 
     <footer>
-        <p>I am awesome :)</p>
+        <p class="footer">Thanks for viewing & Hope to hear from you!</p>
     </footer>
 </body>
 </html>
