updated html & css files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 <section>
     <h2><a id="AboutMe" class="AboutMeTitle">About Me</a></h2>
 
-    <p class="AboutMeparagraph">I am a very attentive and curious individual.
+    <p class="AboutMeparagraph">I am a very attentive and curious individual. I enjoy being outside with my dog and spending time with my large family. 
+        I am the oldest of 8 siblings. I am a very active person, I like running and working out. I am a military veteran, I served in the U.S. Navy.
+        While I was in the service my job was aviation electrician. I worked on specific electrical systems of aircraft.
+        I worked for my family's pool company as a technicain for 3 years.
+
     </p>
 </section>
 
