slight changes to html & css file

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 <section>
     <h2><a id="AboutMe" class="AboutMeTitle">About Me</a></h2>
 
-    <p class="AboutMeparagraph">I am a very attentive and curious individual. I enjoy being outside with my dog and spending time with my large family. 
-        I am the oldest of 8 siblings. I am a very active person, I like running and working out. I am a military veteran, I served in the U.S. Navy.
-        While I was in the service my job was aviation electrician. I worked on specific electrical systems of aircraft.
-        I worked for my family's pool company as a technicain for 3 years.
+    <p class="AboutMeparagraph">I am a very attentive and curious individual. Being outside with my dog and spending time with my large family is something that brings me happines. 
+        I am the oldest of 8 siblings. I'm a very active person, I like running and working out. I served in the U.S. Navy. While I was in the service my job was aviation electrician. I worked on specific electrical systems of aircraft.
+        I worked for my family's pool company as a technician for 3 years. This inspired me to start my own company that I currently run and operate. I have alwyas been intrested in the technology industry. In more recent years software and development have intrigued me.
 
     </p>
 </section>
@@ -53,7 +52,7 @@
     </section>
 
     <footer>
-        <p class="footer">Thanks for viewing & Hope to hear from you!</p>
+        <p class="footer">Thanks for viewing & hope to hear from you!</p>
     </footer>
 </body>
 </html>
