--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <section>
-    <h2><a id="AboutMe" class="AboutMeTitle">About Me</a></h2>
+    <h2><a id="AboutMe" class="AboutMeTitle">~About Me~</a></h2>
 
     <p class="AboutMeparagraph">I am a very attentive and curious individual. Being outside with my dog and spending time with my large family is something that brings me happines. 
         I am the oldest of 8 siblings. I'm a very active person, I like running and working out. I served in the U.S. Navy. While I was in the service my job was aviation electrician. I worked on specific electrical systems of aircraft.
