--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2><a id="Work" class="Work">Work</a></h2>
         <a href="https://poguet.github.io/tdp-coding-challenge-1/#social-media-marketing"><img class="work1" src="./IMG/horizon.png"></a>
         <a href="https://www.youtube.com/shorts/OELoOaN33ks"><img class="work2" src="./IMG/goat pic.png"></a>
-        <a href="https://www.youtube.com/watch?v=SqmGoa3dpSM"><img class="work3" src="./IMG/IMG_6513 2.JPG"></a>
+        <a href="https://jdalfaro4.github.io/Cutie-Pies/"><img class="work3" src="./IMG/Screenshot 2023-02-02 at 10.35.24 PM.png"></a>
        
 </section>
 
