update portfolio and image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section>
     <h2><a id="Work" class="Work">Work</a></h2>
         <a href="https://poguet.github.io/tdp-coding-challenge-1/#social-media-marketing"><img class="work1" src="./IMG/horizon.png"></a>
-        <a href="https://www.youtube.com/shorts/OELoOaN33ks"><img class="work2" src="./IMG/goat pic.png"></a>
+        <a href="https://less-waste-more-taste7.herokuapp.com/"><img class="work2" src="./IMG/2d0849d6-bbf1-4523-b9f6-d072f7d94505.jpg"></a>
         <a href="https://jdalfaro4.github.io/Cutie-Pies/"><img class="work3" src="./IMG/Screenshot 2023-02-02 at 10.35.24 PM.png"></a>
        
 </section>
